<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicTranscribe</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text"> Welcome to the Music Transcription App. Currently under development for use with a piano.</string>
    <string name="library_button_text"> View your Library </string>
    <string name="goto_recording_button_text"> New Project </string>
    <string name="random_matrix_button_text"> Experimental </string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="record_button_text"> Start Recording! </string>
    <string name="make_graph_button_text">Make Graph</string>
    <string name="dGraph_every_cycle_button_text">Graph Each Cycle</string>
    <string name="dDropbox_upload_button_text">DB:false</string>
    <string name="title_activity_percent_data">PercentData</string>
    <string name="hello_world">Hello world!</string>

    <!-- Data collect Activity -->
    <string name="title_activity_datacollect">Datacollect Activity</string>
    <string name="goto_datacollect_activity_button">Data Collection</string>
    <string name="default_num_recordings">10</string>
    <string name="start_n_recordings">Get this many recordings</string>
    <string name="default_recording_time">3000</string>
    <string name="recording_summary_button_text">Summary</string>
    <string name="start_timed_recording">Record this long (ms)</string>
    <string name="get_note_data_button_text">Get data for this note</string>
    <string name="start_new_map_button_text">Reset to new map</string>
    <string name="save_new_map_button_text">Write map to file</string>
    <string name="map_file_name_edittext_hint">Map Filename</string>
    <string name="load_note_map_button_text">Load this map</string>
    <string name="list_all_private_files_button_text">ls</string>
    <string name="inspect_active_file_button_text">Inspect Active File</string>
    
    
    <string name="delete_all_private_files_button_text">Delete all files</string>
    
  
    <!-- Misc/reusable -->
    <string name="one">1</string>
    <string name="title_activity_graphics">GraphicsActivity</string>
    <string name="goto_graphics_button">Graphics</string>

</resources>
