<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" 
    android:gravity="center">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text" />

    <Button
        android:id="@+id/goto_recording_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_recording_button_text" />

	<Button
        android:id="@+id/goto_datacollect_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_datacollect_activity_button" />
        
    <Button
        android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_button_text" />
    
    <Button
        android:id="@+id/dropbox_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In to Dropbox" />
    


</LinearLayout>