<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DatacollectActivity"
    android:orientation="vertical" >

    <LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:gravity="center" >
		
        <EditText
        	android:id="@+id/num_recordings_edittext"
  			android:layout_width="100dp"
  			android:layout_height="wrap_content"
    		android:inputType="number" 
    		android:text="@string/default_num_recordings" />
        
        <Button
       		android:id="@+id/submit_n_recordings_button"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:text="@string/start_n_recordings" />
        
    </LinearLayout>
    
    <LinearLayout
   		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:gravity="center" >
		
        <EditText
        	android:id="@+id/recording_time_edittext"
  			android:layout_width="100dp"
  			android:layout_height="wrap_content"
    		android:inputType="number"
    		android:text="@string/default_recording_time" />
        
        <Button
       		android:id="@+id/submit_time_recording_button"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:text="@string/start_timed_recording" />
	</LinearLayout>

</LinearLayout>
