<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RecordActivity" >

        <LinearLayout
            android:id="@+id/Note_Container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amplitude_graph"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:padding="1dp" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Record_Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Record_PausePlay_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_button_text" />

            <Button
                android:id="@+id/Make_Graph_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_graph_button_text" />

            <Button
                android:id="@+id/dGraph_Every_Cycle_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dGraph_every_cycle_button_text" />

            <Button
                android:id="@+id/list_files_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_all_private_files_button_text" />
            <!--
		    <Button
		        android:id="@+id/dDropbox_Upload_Button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/dDropbox_upload_button_text"
		        android:layout_weight="1" />
            -->

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/empty_fragment"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left" />

</FrameLayout>